--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body {
   flex-direction: column;
   font-family: inherit;
   line-height: inherit;
-  margin: 0;
+  /* margin: 0; */
 }
 
 html,
@@ -61,7 +61,7 @@ body {
   width: 3.5rem;
   height: 100%;
   margin: 0 0 0 auto;
-  padding: 0;
+  /* padding: 0; */
   background: 50% 50% no-repeat transparent url(assets/icon_list_m@1x.svg);
   border: none;
   border-radius: 0;
@@ -78,8 +78,8 @@ body {
 .header__links {
   display: flex;
   gap: 1.75rem;
-  margin: 0;
-  padding: 0;
+  /* margin: 0;
+  padding: 0; */
 }
 
 @media (max-width: 768px) {
@@ -185,7 +185,7 @@ body {
 }
 
 .section__title-header {
-  margin: 0;
+  /* margin: 0; */
   font-size: 1.125rem;
   font-weight: bold;
   color: #333333;
@@ -202,7 +202,7 @@ body {
     gap: 1rem;
   }
 
-  .section__main-title {
+  .h {
     display: none;
   }
 }
@@ -231,7 +231,7 @@ body {
   gap: 0.625rem;
   align-items: baseline;
   margin: 0 0 0 0.8125rem;
-  padding: 0;
+  /* padding: 0; */
 }
 
 @media (max-width: 768px) {
@@ -306,14 +306,14 @@ body {
 }
 
 .hero-dashboard__subtitle {
-  margin: 0.375rem 0 0 0;
+  margin-top: 0.375rem;
   font-size: 0.875rem;
   color: #333333;
 }
 
 @media (max-width: 768px) {
   .hero-dashboard__subtitle {
-    margin: 0.3125rem 0 0 0;
+    margin-top: 0.3125rem;
     font-size: 0.75rem;
   }
 }
@@ -321,8 +321,8 @@ body {
 .hero-dashboard__info {
   display: flex;
   gap: 1.125rem;
-  margin: 1.5625rem 0 0 0;
-  padding: 0;
+  margin-top: 1.5625rem;
+  /* padding: 0; */
 
 }
 
@@ -332,10 +332,10 @@ body {
   }
 }
 
-.hero-dashboard__item {
+/* .hero-dashboard__item {
   margin: 0;
   padding: 0;
-}
+} */
 
 .hero-dashboard__item-title {
   font-size: 0.875rem;
@@ -389,6 +389,7 @@ body {
   flex-direction: column;
   gap: 0.9375rem;
   margin: 0;
+
   padding: 1.25rem 1.5625rem 1.25rem 0;
   overflow: auto;
   scrollbar-width: none;
@@ -462,7 +463,7 @@ body {
 }
 
 .event__title {
-  margin: 0;
+  /* margin: 0; */
   font-size: 0.875rem;
   font-weight: bold;
   color: #333333;
@@ -477,8 +478,8 @@ body {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   gap: 0.9375rem;
-  margin: 0;
-  padding: 0;
+  /* margin: 0;
+  padding: 0; */
 }
 
 @media (max-width: 768px) {
@@ -511,8 +512,8 @@ body {
 .section__panel-list {
   display: flex;
   gap: 0.9375rem;
-  margin: 0;
-  padding: 0;
+  /* margin: 0;
+  padding: 0; */
 }
 
 .footer {
@@ -530,8 +531,7 @@ body {
     align-items: flex-start;
     gap: 0.9375rem;
     height: auto;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
+    padding: 1rem 0;
   }
 }
 
@@ -539,8 +539,8 @@ body {
   display: flex;
   align-items: baseline;
   gap: 0.9375rem;
-  margin: 0;
-  padding: 0;
+  /* margin: 0;
+  padding: 0; */
 }
 
 @media (max-width: 768px) {
